# FHE-API

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  state.rs  types.rs
test/: api.js  api.ts  package-lock.json  package.json
