[package]
name = "tfhe-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.8.7", features = ["boolean", "shortint", "integer", "x86_64-unix", "gpu"] }
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
sha2 = "0.10"
base64 = "0.13"
bincode = "1.3.3"
ring = "0.16"
tower-http = { version = "0.4", features = ["limit"] }

[profile.dev]
opt-level = 1  # 默认是 0，可以设置为 1 在保持编译速度的同时提升一些运行速度